fixed line break in scenario output

--- a/plugin-code/src/main/resources/template/css/cluecumber.css
+++ b/plugin-code/src/main/resources/template/css/cluecumber.css
@@ -74,6 +74,10 @@ a {
     border: 1px solid rgb(149, 189, 197);
 }
 
+.scenarioOutput {
+    white-space: pre-line;
+}
+
 pre {
     margin: 0;
     white-space: pre-wrap;
